[package]
name = "cc2650f128"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
description = "Peripheral access API for TI CC26x0 microcontrollers"
#documentation = "https://docs.rs/"
repository = "https://git.sr.ht/~wezm/cc2650f128"
keywords = ["arm", "cortex-m", "ti", "simplelink"]
categories = ["embedded"]
#license = "0BSD"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6"

[features]
rt = ["cortex-m-rt/device"]
