[package]
name = "cc2650"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
description = "Device support for TI CC2650 microcontrollers"

documentation = "https://docs.rs/cc2650"
repository = "https://git.sr.ht/~wezm/cc2650"

readme = "README.md"
keywords = ["arm", "cortex-m", "ti", "simplelink"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6"

[features]
rt = ["cortex-m-rt/device"]
